--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
+    "babel-loader": "^6.3.2",
     "chalk": "^1.1.3",
+    "css-loader": "^0.26.2",
     "localtunnel": "^1.8.2",
     "npm-run-all": "^4.0.2",
-    "nsp": "^2.6.2"
+    "nsp": "^2.6.2",
+    "numeral": "^2.0.4",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1"
   },
   "repository": {
     "type": "git",
